  * Added support for astorpy.units.quantity.Quantity instances to lsl.misc.rfutil
  * Updated the AIPY version requirement to >=3.0.1
  * Updated the scipy version requirement to >=0.19
  * Removed lsl.misc.mathutil.savitzky_golay since it was added in scipy v0.14.0+
  * Added support for collecting usage data for LSL via lsl.misc.telemetry

1.2.6
  * Fixed a bug in the lsl.reader.ldp classes that causes offset() to fail in certain cases

1.2.5
  * Updated setup.py to make it more likely that clang will build OpenMP-enabled extensions
  * Updated the install documentation to recommend pip
  * Added a 4-tap + Hanning windowed polyphase filter bank to the various functions in lsl.correlator.fx
  * Added an option to use the new PFB in correlateTBN and correlateTBW
  * Added an option to use the new PFB in drxSpectra, tbnSpectra, and tbwSpectra
  * Added support for proper motions to the IDF format
  * Added support for storing source intentions in the CALCODE field in FITS IDI files
  * Modified the offset method in lsl.reader.ldp to take into account the frame buffers
  * Added support to the lsl.reader.ldp.DRSpecFile object for jumping over bad data at the start of a file
  * Improved support for complex and multi-channel VDIF data
  * Added support for filter code 7 (19.6 MHz) on ADP
  * Added support for beam 3 on ADP

1.2.4
  * Fixed a bug in driftcurve.py that put a cos(decliation) correction into the LFSM runs
  * Updated the documentation to reflect that unittest2 is now required as of 1.2.2 for Python 2.6 support
  * Added argparse as an extra dependency for Python 2.6
  * Moved the scripts that ship with LSL to argparse for command line parsing
  * Added a new lsl.misc.parser module to help with the switch over to argparse
  * Updated the minimum PyEphem version of 3.5.7.3
  * Fixed a bug in lsl.misc.ionosphere that causes some UQR files to fail to parse
  * Updated the URL/filename structure used to download the CODE files in lsl.misc.ionosphere